--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -132,8 +132,8 @@
   <data name="Root_NotFound" xml:space="preserve">
     <value>The requested root has not been found.</value>
   </data>
-  <data name="Root_RootNameExists" xml:space="preserve">
-    <value>Root with name {0} already exists.</value>
+  <data name="Root_RootCodeExists" xml:space="preserve">
+    <value>Root with code {0} already exists.</value>
   </data>
   <data name="Root_UpdateFailed" xml:space="preserve">
     <value>Updating the root has failed.</value>
