--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -138,4 +138,25 @@
   <data name="Root_UpdateFailed" xml:space="preserve">
     <value>Updating the root has failed.</value>
   </data>
+  <data name="SimpleRoot_Concurrency" xml:space="preserve">
+    <value>The root has been changed in the meantime.</value>
+  </data>
+  <data name="SimpleRoot_DeleteFailed" xml:space="preserve">
+    <value>Deleting the root has failed.</value>
+  </data>
+  <data name="SimpleRoot_Delete_Others" xml:space="preserve">
+    <value>Cannot delete the root because others belong to it.</value>
+  </data>
+  <data name="SimpleRoot_InsertFailed" xml:space="preserve">
+    <value>Creating the new root has failed.</value>
+  </data>
+  <data name="SimpleRoot_NotFound" xml:space="preserve">
+    <value>The requested root has not been found.</value>
+  </data>
+  <data name="SimpleRoot_RootCodeExists" xml:space="preserve">
+    <value>Root with code {0} already exists.</value>
+  </data>
+  <data name="SimpleRoot_UpdateFailed" xml:space="preserve">
+    <value>Updating the root has failed.</value>
+  </data>
 </root>
