--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="RenameRoot_NotFound" xml:space="preserve">
+    <value>The requested root has not been found.</value>
+  </data>
+  <data name="RenameRoot_RenameFailed" xml:space="preserve">
+    <value>Renaming the root has failed.</value>
+  </data>
   <data name="Root_Concurrency" xml:space="preserve">
     <value>The root has been changed in the meantime.</value>
   </data>
