--- a/CslaModelTemplates.Resources/ValidationText.resx
+++ b/CslaModelTemplates.Resources/ValidationText.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="RenameRoot_RootKey_Required" xml:space="preserve">
+    <value>The key of the root is required.</value>
+  </data>
+  <data name="RenameRoot_RootName_Required" xml:space="preserve">
+    <value>The new root name is required.</value>
+  </data>
   <data name="SimpleRoot_RootCode_MaxLength" xml:space="preserve">
     <value>The root code cannot exceed {1} characters.</value>
   </data>
