--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -123,6 +123,21 @@
   <data name="RenameRoot_RenameFailed" xml:space="preserve">
     <value>Renaming the root has failed.</value>
   </data>
+  <data name="RootItem_DeleteFailed" xml:space="preserve">
+    <value>Deleting the root item with code {0} has failed.</value>
+  </data>
+  <data name="RootItem_InsertFailed" xml:space="preserve">
+    <value>Creating the new root item with code {0} has failed.</value>
+  </data>
+  <data name="RootItem_NotFound" xml:space="preserve">
+    <value>The requested root item has not been found.</value>
+  </data>
+  <data name="RootItem_RootItemCodeExists" xml:space="preserve">
+    <value>Root item with code {0} already exists.</value>
+  </data>
+  <data name="RootItem_UpdateFailed" xml:space="preserve">
+    <value>Updating the root item with code {0} has failed.</value>
+  </data>
   <data name="Root_Concurrency" xml:space="preserve">
     <value>The root has been changed in the meantime.</value>
   </data>
