--- a/CslaModelTemplates.Resources/ValidationText.resx
+++ b/CslaModelTemplates.Resources/ValidationText.resx
@@ -123,6 +123,33 @@
   <data name="RenameRoot_RootName_Required" xml:space="preserve">
     <value>The new root name is required.</value>
   </data>
+  <data name="RootItem_RootItemCode_MaxLength" xml:space="preserve">
+    <value>The root item code cannot exceed {1} characters.</value>
+  </data>
+  <data name="RootItem_RootItemCode_NotUnique" xml:space="preserve">
+    <value>The root item code is not unique.</value>
+  </data>
+  <data name="RootItem_RootItemCode_Required" xml:space="preserve">
+    <value>The root item code is required.</value>
+  </data>
+  <data name="RootItem_RootItemName_MaxLength" xml:space="preserve">
+    <value>The root item name cannot exceed {1} characters.</value>
+  </data>
+  <data name="RootItem_RootItemName_Required" xml:space="preserve">
+    <value>The root item name is required.</value>
+  </data>
+  <data name="Root_RootCode_MaxLength" xml:space="preserve">
+    <value>The root code cannot exceed {1} characters.</value>
+  </data>
+  <data name="Root_RootCode_Required" xml:space="preserve">
+    <value>The root code is required.</value>
+  </data>
+  <data name="Root_RootName_MaxLength" xml:space="preserve">
+    <value>The root name cannot exceed {1} characters.</value>
+  </data>
+  <data name="Root_RootName_Required" xml:space="preserve">
+    <value>The root name is required.</value>
+  </data>
   <data name="SimpleRoot_RootCode_MaxLength" xml:space="preserve">
     <value>The root code cannot exceed {1} characters.</value>
   </data>
