--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -159,6 +159,24 @@
   <data name="Root_UpdateFailed" xml:space="preserve">
     <value>Updating the root has failed.</value>
   </data>
+  <data name="SimpleRootSetItem_Concurrency" xml:space="preserve">
+    <value>The root with code {0} has been changed in the meantime.</value>
+  </data>
+  <data name="SimpleRootSetItem_DeleteFailed" xml:space="preserve">
+    <value>Deleting the root with code {0} has failed.</value>
+  </data>
+  <data name="SimpleRootSetItem_InsertFailed" xml:space="preserve">
+    <value>Creating the new root with code {0} has failed.</value>
+  </data>
+  <data name="SimpleRootSetItem_NotFound" xml:space="preserve">
+    <value>The root with code {0} has not been found.</value>
+  </data>
+  <data name="SimpleRootSetItem_RootCodeExists" xml:space="preserve">
+    <value>Root with code {0} already exists.</value>
+  </data>
+  <data name="SimpleRootSetItem_UpdateFailed" xml:space="preserve">
+    <value>Updating the root with code {0} has failed.</value>
+  </data>
   <data name="SimpleRoot_Concurrency" xml:space="preserve">
     <value>The root has been changed in the meantime.</value>
   </data>
