--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Group_NotFound" xml:space="preserve">
+    <value>The requested group has not been found.</value>
+  </data>
   <data name="Player_DeleteFailed" xml:space="preserve">
     <value>Deleting the player with code {0} has failed.</value>
   </data>
