--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CountTeams_CountFailed" xml:space="preserve">
+    <value>Counting teams has failed.</value>
+  </data>
   <data name="Group_Concurrency" xml:space="preserve">
     <value>The group has been changed in the meantime.</value>
   </data>
