--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -120,6 +120,18 @@
   <data name="CountTeams_CountFailed" xml:space="preserve">
     <value>Counting teams has failed.</value>
   </data>
+  <data name="GroupPerson_DeleteFailed" xml:space="preserve">
+    <value>Deleting the person with name {0} has failed.</value>
+  </data>
+  <data name="GroupPerson_Exists" xml:space="preserve">
+    <value>Person with name {0} already exists.</value>
+  </data>
+  <data name="GroupPerson_InsertFailed" xml:space="preserve">
+    <value>Creating the new person with name {0} has failed.</value>
+  </data>
+  <data name="GroupPerson_NotFound" xml:space="preserve">
+    <value>The requested person with name {0} has not been found.</value>
+  </data>
   <data name="Group_Concurrency" xml:space="preserve">
     <value>The group has been changed in the meantime.</value>
   </data>
@@ -137,21 +149,6 @@
   </data>
   <data name="Group_UpdateFailed" xml:space="preserve">
     <value>Updating the group has failed.</value>
-  </data>
-  <data name="Membership_InsertFailed" xml:space="preserve">
-    <value>Creating the new members has failed.</value>
-  </data>
-  <data name="Member_DeleteFailed" xml:space="preserve">
-    <value>Deleting the member with name {0} has failed.</value>
-  </data>
-  <data name="Member_Exists" xml:space="preserve">
-    <value>Member with name {0} already exists.</value>
-  </data>
-  <data name="Member_InsertFailed" xml:space="preserve">
-    <value>Creating the new member with name {0} has failed.</value>
-  </data>
-  <data name="Member_NotFound" xml:space="preserve">
-    <value>The requested member with name {0} has not been found.</value>
   </data>
   <data name="Player_DeleteFailed" xml:space="preserve">
     <value>Deleting the player with code {0} has failed.</value>
