Add simple upsert DAL.

--- a/CslaModelTemplates.Resources/DalText.resx
+++ b/CslaModelTemplates.Resources/DalText.resx
@@ -189,6 +189,24 @@
   <data name="SimpleTeamSetItem_UpdateFailed" xml:space="preserve">
     <value>Updating the team with code {0} has failed.</value>
   </data>
+  <data name="SimpleTeamUpsert_Concurrency" xml:space="preserve">
+    <value>The team has been changed in the meantime.</value>
+  </data>
+  <data name="SimpleTeamUpsert_DeleteFailed" xml:space="preserve">
+    <value>Deleting the team has failed.</value>
+  </data>
+  <data name="SimpleTeamUpsert_InsertFailed" xml:space="preserve">
+    <value>Creating the new team has failed.</value>
+  </data>
+  <data name="SimpleTeamUpsert_NotFound" xml:space="preserve">
+    <value>The requested team has not been found.</value>
+  </data>
+  <data name="SimpleTeamUpsert_TeamCodeExists" xml:space="preserve">
+    <value>Team with code {0} already exists.</value>
+  </data>
+  <data name="SimpleTeamUpsert_UpdateFailed" xml:space="preserve">
+    <value>Updating the team has failed.</value>
+  </data>
   <data name="SimpleTeam_Concurrency" xml:space="preserve">
     <value>The team has been changed in the meantime.</value>
   </data>
